Changing name stuff from convo to gallium (better name lol) Also started working on a formatting function (I want to add stuff that if you say send a message like "hi math(2+2)" it would say "hi 4" like formatting functions, maybe with some italic, and other cool stuff, doesnt work right though sadly, dont know why)

--- a/index.html
+++ b/index.html
@@ -8,21 +8,13 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Sansation:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
 
-    <link rel="icon" type="image/png" href="/convo_favicon/favicon-96x96.png" sizes="96x96" />
-    <link rel="icon" type="image/svg+xml" href="/convo_favicon/favicon.svg" />
-    <link rel="shortcut icon" href="/convo_favicon/favicon.ico" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/convo_favicon/apple-touch-icon.png" />
-    <meta name="apple-mobile-web-app-title" content="Convo" />
-    <link rel="manifest" href="/convo_favicon/site.webmanifest" />
-
     <link rel="stylesheet" href="style_Index.css">
-    <script type="text/javascript" src="./index.js"></script>
-    <title>Convo Test</title>
+    <title>Gallium Test</title>
 </head>
 <body>
 
     <div id="main-content">
-        <h1>Convo Chat</h1>
+        <h1>Gallium Chat</h1>
         <div id="chat-messages">
 
         </div>
@@ -30,11 +22,13 @@
             <div id="chat-text-input" contenteditable="true"></div>
         </div>
 <!--        <div id="user-settings-label">-->
-<!--            <img src="f514cefad0334d413f09f9a2eb468db7.png" id="user-settings-label-pfp">-->
+<!--            <img src="pfp.png" id="user-settings-label-pfp">-->
 <!--            <span id="user-settings-label-name">Username</span>-->
 <!--            <button id="user-settings"></button>-->
 <!--        </div>-->
     </div>
 
+
+    <script type="text/javascript" src="index.js"></script>
 </body>
 </html>
